Implement video handling, serving. Added OS path support for database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=salespitchapi
+
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/salespitch
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
-spring.jpa.hibernate.ddl-auto=update
-logging.file.name=logs/salespitchapi.log
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+logging.file.name=logs/salespitchapi.log
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-request-size=75MB
 
