--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-request-size=75MB
 
+#stmp server
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=7d590e001@smtp-brevo.com
+spring.mail.password=hnNb3YIVD7Op6yWt
+spring.mail.properties.mail.smptp.auth=true
+spring.mail.properties.mail.starttls.enable=true
+spring.mail.properties.mail.starttls.required=true
